# coding_agent

./: .gitignore  AgentGraph.py  agent.py  backend.py  explain_node.py  frontend.py  modify_code_base_nodes.py  new_project_nodes.py  planner_node.py  pyproject.toml  requirements.txt  research_lora.ipynb  state.py
hands_free_coding_tools/: base_llm.py  embedding_tool.py  explain_tool.py  generate_tool.py  modify_router.py  planner.py  read_tool.py  retriever_tool.py  write_tool.py
mcp_tools/: mcp.py
q_lora_model/: model_quantiation.py
